--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "expo": "~42.0.0",
-    "expo-background-fetch": "^9.2.2",
+    "expo": "~38.0.11",
+    "expo-background-fetch": "8.3.0",
     "expo-status-bar": "~1.0.4",
-    "expo-task-manager": "^9.2.2",
+    "expo-task-manager": "8.3.0",
     "react": "16.13.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.3.tar.gz",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
